test/conformance/chainsaw/generate/clusterpolicy/standard/data/nosync/cpol-data-nosync-delete-rule/resource-generated.yaml
apiVersion: v1
data:
  KAFKA_ADDRESS: 192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092
  ZK_ADDRESS: 192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181
kind: ConfigMap
metadata:
  labels:
    somekey: somevalue
  name: zk-kafka-address
  namespace: trench-splendid
---
apiVersion: v1
data:
  mysupersecretkey: bXlzdXBlcnNlY3JldHZhbHVl
kind: Secret
metadata:
  labels:
    somekey: somesecretvalue
  name: supersecret
  namespace: trench-splendid
type: Opaque
