test/conformance/chainsaw/generate/clusterpolicy/standard/data/nosync/cpol-data-nosync-delete-rule/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trench-splendid
