test/conformance/chainsaw/generate/clusterpolicy/standard/data/nosync/cpol-data-nosync-delete-rule/03-remove-rule.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: remove-rule
spec:
  timeouts: {}
  try:
  - apply:
      file: policy-with-rule-removed.yaml
  - assert:
      file: both-resources-exist.yaml
