test/conformance/chainsaw/generate/clusterpolicy/standard/data/nosync/cpol-data-nosync-delete-rule/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-data-nosync-delete-rule
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-data-nosync-delete-rule-policy
  - name: step-02
    try:
    - apply:
        file: resource.yaml
    - assert:
        file: resource-generated.yaml
  - name: step-03
    try:
    - apply:
        file: policy-with-rule-removed.yaml
    - assert:
        file: both-resources-exist.yaml
